Fixed various styling issues and added dark mode styling for contact me page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,8 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Outfit, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
 }
-
 
 @keyframes blink {
     0% {
